完成单元和集成测试